fix: add spacing after emoji

--- a/src/excalidraw-app/collab/RoomDialog.scss
+++ b/src/excalidraw-app/collab/RoomDialog.scss
@@ -138,6 +138,10 @@
         & p + p {
           margin-top: 1em;
         }
+
+        &__emoji {
+          margin-right: 1ch;
+        }
       }
 
       &__actions {
